chore(temp): temp

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <title>ProdestForms</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1">
+  <link rel="icon"
+        type="image/x-icon"
+        href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="w-100 h-100 d-flex justify-content-center align-items-center">
+      <div class="spinner-border text-primary position-fixed">
+      </div>
+    </div>
+  </app-root>
 </body>
+
 </html>
